--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tabler/icons-react": "^3.26.0",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
