--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@tabler/icons-react": "^3.26.0",
     "framer-motion": "^11.15.0",
+    "gsap": "^3.12.5",
+    "imagesloaded": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "react-three": "^0.9.7",
+    "three": "^0.172.0",
+    "vite-plugin-glsl": "^1.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
