--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.28.1",
-    "framer-motion": "^11.15.0",
-    "gsap": "^3.12.5",
+    "@gsap/react": "^2.1.2",
+    "framer-motion": "^11.18.2",
+    "gsap": "^3.12.7",
     "imagesloaded": "^5.0.0",
+    "lenis": "^1.1.20",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
