--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
     "vite-plugin-glsl": "^1.3.1"
   },
