fix /degsign page crash bug

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-    "version": 2,
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/api/src/index.js"
-        }
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
     ]
-}
+  }
